# game_of_life

./: CMakeLists.txt  README.md
include/: GameController.h  GuiApp.h  game.h
src/: GameController.cpp  GuiApp.cpp  game.cpp  main.cpp
